# Directx12_learn

./: .gitignore  CMakeList.txt  CMakeLists.txt
Directx12_learn/: Directx12_learn.sln
Directx12_learn/Directx12_learn/: Directx12_learn.vcxproj
Directx12_learn/Directx12_learn/Source/: CMakeLists.txt  Main.cpp
GameEngine/Source/: CMakeLists.txt
