# Settings
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include/DX12/shared)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include/DX12/um)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/GameEngine/Common)

# Files
FILE(GLOB_RECURSE ENGINE_SOURCES *.cpp *.c)
FILE(GLOB_RECURSE ENGINE_HEADERS *.h *.hpp *.inl)

# dx12 include folder
FILE(GLOB DX12 ${CMAKE_SOURCE_DIR}/Include/DX12/shared/*.*)
FILE(GLOB DX12 ${CMAKE_SOURCE_DIR}/Include/DX12/um/*.*)

# common include folder
FILE(GLOB_RECURSE COMMON ${CMAKE_SOURCE_DIR}/GameEngine/Common/*.*)


ADD_EXECUTABLE(GameEngine
	${ENGINE_SOURCES}
	${ENGINE_HEADERS}
	${COMMON}
)

TARGET_LINK_LIBRARIES(GameEngine
	d3d12
	dxgi
	d3dcompiler
)

# Add filters
SOURCE_GROUP(Include\\DX12 FILES ${DX12})
SOURCE_GROUP(Headers\\Common FILES ${COMMON})

